# nvclock

./: .cvsignore  ABOUT  AUTHORS  ChangeLog  FAQ  Makefile.in  README  acinclude.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  nvclock.1  nvclock.desktop
CVS/: Entries  Repository
src/: Makefile.in  smartdimmer.c
src/CVS/: Entries  Repository
src/backend/: Makefile.in  back_bsd.c  back_linux.c  back_win32.c  bios.c  config.c  i2c.c  info.c  nv30.c  nv40.c  nv50.c  nvclock.h  nvcontrol.c
src/backend/CVS/: Entries  Repository
src/gtk/: .cvsignore  Makefile.in  banner.c  banner.h  banner_gl.h  banner_hw.h  gl.c  gl.h  hw.c  hw.h  interface.h  main.c  settings.c  settings.h
src/gtk/CVS/: Entries  Repository
src/nvcontrol/: Makefile.in  libnvcontrol.c  libnvcontrol.h  nvcontrol.c  nvcontrol.h
src/nvcontrol/CVS/: Entries  Repository  Root
src/qt/: .cvsignore  Makefile.in  links.xpm  main.cpp  nv.xpm  people.xpm  qt_nvclock.cpp  qt_nvclock.h  qt_nvclock.pro  qt_xfree.cpp  qt_xfree.h  x.xpm
src/qt/CVS/: Entries  Repository
